--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilermaker",
+  "name": "TBD",
   "version": "1.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "TBD",
   "engines": {
     "node": ">= 7.0.0"
   },
@@ -17,7 +17,6 @@
     "prepare": "if [ -d .git ]; then npm-merge-driver install; fi",
     "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
     "postinstall": "touch secrets.js",
-    "seed": "node script/seed.js",
     "start": "node server",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' npm run start-server",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
@@ -34,20 +33,12 @@
       "git add"
     ]
   },
-  "author": "Fullstack Academy of Code",
+  "author": "Jinyan Shen",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
-    "compression": "^1.7.3",
-    "connect-session-sequelize": "^4.1.0",
     "express": "^4.16.3",
-    "express-session": "^1.15.1",
-    "history": "^4.6.3",
     "morgan": "^1.8.1",
-    "passport": "^0.3.2",
-    "passport-google-oauth": "^1.0.0",
-    "pg": "^6.1.2",
-    "pg-hstore": "^2.3.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -55,9 +46,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
-    "redux-thunk": "^2.3.0",
-    "sequelize": "^4.38.0",
-    "socket.io": "^2.1.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.55",
@@ -88,7 +77,6 @@
     "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
-    "npm-merge-driver": "^2.3.5",
     "prettier": "1.11.1",
     "react-test-renderer": "^16.4.2",
     "redux-devtools-extension": "^2.13.5",
